
name:                   music-suite
version:                2.0.0
author:                 Hans Hoglund
maintainer:             Hans Hoglund <info@hanshoglund.com>
license:                BSD3
license-file:           COPYING
synopsis:               A set of libraries for composition, analysis and manipulation of music.
category:               Music
tested-with:            GHC == 8.10.7
build-type:             Simple
cabal-version:          >= 1.10

description:
    See <http://music-suite.github.io>.

extra-source-files:     README.md,
                        examples/*.hs,
                        data/*.ly
                        data/*.csv
                        test/musicxml/*.xml

source-repository head
    type:             	git
    location:         	git://github.com/music-suite/music-suite.git

library
    build-depends:
                        base,
                        aeson >= 1.5 && < 2,
                        aeson-pretty,
                        average,
                        base-orphans,
                        base-prelude,
                        bytestring,
                        cassava,
                        colour,
                        comonad,
                        containers,
                        contravariant,
                        doctest,
                        data-default,
                        data-interval,
                        directory,
                        file-embed,
                        filepath,
                        HCodecs,
                        iso-deriving,
                        lens,
                        logict,
                        modular-arithmetic,
                        monadplus,
                        MonadRandom,
                        mtl,
                        neat-interpolation,
                        NumInstances,
                        optparse-applicative,
                        parsec,
                        positive,
                        prettify,
                        process,
                        QuickCheck,
                        random,
                        random-shuffle,
                        roman-numerals,
                        scientific,
                        semigroups,
                        split,
                        streams,
                        text,
                        transformers,
                        -- type-unary,
                        unordered-containers,
                        vector-space,
                        xml
    if !os(windows)
      build-depends:    unix

    exposed-modules:
                        Music.Prelude.Standard
                        Control.Monad.Abort
                        Control.Monad.Log
                        Codec.Midi.Generic
                        Codec.Midi.Json
                        Data.AffineSpace.Point
                        Data.AffineSpace.Point.Offsets
                        Data.FiniteSeq
                        Data.Functor.Context
                        Data.Functor.Couple
                        Data.LabelTree
                        Data.Music.Lilypond
                        Data.Music.Lilypond.Dynamics
                        Data.Music.Lilypond.Pitch
                        Data.Music.Lilypond.Value
                        Data.Music.MusicXml
                        Data.Music.MusicXml.Dynamics
                        Data.Music.MusicXml.Pitch
                        Data.Music.MusicXml.Read
                        Data.Music.MusicXml.Score
                        Data.Music.MusicXml.Simple
                        Data.Music.MusicXml.Time
                        Data.Music.MusicXml.Write
                        Data.Music.Sibelius
                        Data.Semigroup.Instances
                        Music.Articulation
                        Music.Dynamics
                        Music.Dynamics.Absolute
                        Music.Dynamics.Common
                        Music.Dynamics.Literal
                        Music.Notation.Standard
                        Music.Notation.Standard.Articulation
                        Music.Notation.Standard.Dynamic
                        Music.Notation.Standard.Technique
                        Music.Parts
                        Music.Parts.Division
                        Music.Parts.Group
                        Music.Parts.Instrument
                        Music.Parts.Instrument.Brass
                        Music.Parts.Instrument.Keyboard
                        Music.Parts.Instrument.Percussion
                        Music.Parts.Instrument.Strings
                        Music.Parts.Instrument.Vocal
                        Music.Parts.Instrument.Woodwind
                        Music.Parts.Internal.Data
                        Music.Parts.Part
                        Music.Parts.Solo
                        Music.Parts.Subpart
                        Music.Pitch
                        Music.Pitch.Absolute
                        Music.Pitch.Alterable
                        Music.Pitch.Ambitus
                        Music.Pitch.Augmentable
                        Music.Pitch.Clef
                        Music.Pitch.Common
                        Music.Pitch.Common.Harmony
                        Music.Pitch.Common.Internal
                        Music.Pitch.Common.Interval
                        Music.Pitch.Common.Names
                        Music.Pitch.Common.Number
                        Music.Pitch.Common.Pitch
                        Music.Pitch.Common.Quality
                        Music.Pitch.Common.Semitones
                        Music.Pitch.Common.Spell
                        Music.Pitch.Common.Types
                        Music.Pitch.Equal
                        Music.Pitch.Intonation
                        Music.Pitch.Literal
                        Music.Pitch.Literal.Interval
                        Music.Pitch.Literal.Pitch
                        Music.Pitch.Scale
                        Music.Prelude
                        Music.Prelude.Inspectable
                        Music.Score
                        Music.Score.Articulation
                        Music.Score.Color
                        Music.Score.Dynamics
                        Music.Score.Export.Meta
                        Music.Score.Export.StandardNotation
                        Music.Score.Harmonics
                        Music.Score.Import.Abc
                        Music.Score.Import.Lilypond
                        Music.Score.Import.Midi
                        Music.Score.Import.Sibelius
                        Music.Score.Internal.Export
                        Music.Score.Internal.Instances
                        Music.Score.Internal.Quantize
                        Music.Score.Internal.Util
                        Music.Score.Internal.VoiceSeparation
                        Music.Score.Meta
                        Music.Score.Meta.Annotations
                        Music.Score.Meta.Attribution
                        Music.Score.Meta.Barline
                        Music.Score.Meta.Clef
                        Music.Score.Meta.Fermata
                        Music.Score.Meta.Key
                        Music.Score.Meta.RehearsalMark
                        Music.Score.Meta.Tempo
                        Music.Score.Meta.Time
                        Music.Score.Meta.Title
                        Music.Score.Part
                        Music.Score.Phrases
                        Music.Score.Pitch
                        Music.Score.Slide
                        Music.Score.StaffNumber
                        Music.Score.Technique
                        Music.Score.Text
                        Music.Score.Ties
                        Music.Score.Tremolo
                        Music.Time
                        Music.Time.Aligned
                        Music.Time.Behavior
                        Music.Time.Duration
                        Music.Time.Event
                        Music.Time.Impulses
                        Music.Time.Internal.Convert
                        Music.Time.Internal.Placed
                        Music.Time.Internal.Preliminaries
                        Music.Time.Internal.Track
                        Music.Time.Internal.Transform
                        Music.Time.Internal.Util
                        Music.Time.Juxtapose
                        Music.Time.Meta
                        Music.Time.Note
                        Music.Time.Pattern
                        Music.Time.Position
                        Music.Time.Reactive
                        Music.Time.Rest
                        Music.Time.Score
                        Music.Time.Split
                        Music.Time.Transform
                        Music.Time.Types
                        Music.Time.Voice
    hs-source-dirs:     src,
                        vendor
    default-language:   Haskell2010
    default-extensions: BangPatterns,
                        ConstrainedClassMethods,
                        ConstraintKinds,
                        DeriveDataTypeable,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveGeneric,
                        DeriveLift,
                        DeriveTraversable,
                        DerivingStrategies,
                        EmptyDataDecls,
                        EmptyDataDeriving,
                        ExistentialQuantification,
                        ExplicitForAll,
                        FlexibleContexts,
                        FlexibleInstances,
                        GADTSyntax,
                        GeneralisedNewtypeDeriving,
                        GeneralizedNewtypeDeriving,
                        InstanceSigs,
                        KindSignatures,
                        MultiParamTypeClasses,
                        NamedFieldPuns,
                        NoMonomorphismRestriction,
                        OverloadedStrings,
                        PolyKinds,
                        RankNTypes,
                        ScopedTypeVariables,
                        StandaloneDeriving,
                        StarIsType,
                        TupleSections,
                        TypeApplications,
                        TypeFamilies,
                        TypeOperators,
                        TypeSynonymInstances,
                        ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-unused-top-binds
    -Wno-name-shadowing
    -Werror

test-suite "music-suite-test-umts"
    build-depends:      base,
                        aeson,
                        average,
                        base-orphans,
                        base-prelude,
                        bytestring,
                        cassava,
                        colour,
                        comonad,
                        containers,
                        contravariant,
                        data-default,
                        data-interval,
                        directory,
                        file-embed,
                        filepath,
                        HCodecs,
                        lens,
                        logict,
                        modular-arithmetic,
                        monadplus,
                        MonadRandom,
                        mtl,
                        neat-interpolation,
                        NumInstances,
                        optparse-applicative,
                        parsec,
                        positive,
                        prettify,
                        process,
                        QuickCheck,
                        random,
                        roman-numerals,
                        semigroups,
                        split,
                        streams,
                        tasty,
                        tasty-golden,
                        tasty-quickcheck,
                        text,
                        transformers,
                        -- type-unary,
                        unordered-containers,
                        vector-space,
                        xml,
                        music-suite
    main-is:            UMTS.hs
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    default-language:   Haskell2010


test-suite "music-suite-test-laws"
    build-depends:      base,
                        tasty,
                        tasty-golden,
                        tasty-quickcheck-laws,
                        process,
                        average,
                        containers,
                        tasty-quickcheck,
                        QuickCheck,
                        semigroups,
                        comonad,
                        music-suite
    type:               exitcode-stdio-1.0
    main-is:            Laws.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

test-suite "music-suite-test-regression"
    build-depends:      base,
                        bytestring,
                        HCodecs,
                        lens,
                        prettify,
                        tasty,
                        tasty-golden,
                        text,
                        music-suite
    type:               exitcode-stdio-1.0
    main-is:            Regression.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

test-suite "music-suite-test-xml-parser"
    build-depends:      base,
                        bytestring,
                        text,
                        music-suite,
                        tasty,
                        tasty-hunit,
                        directory,
                        filepath
    type:               exitcode-stdio-1.0
    main-is:            MusicXmlParser.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

test-suite "music-suite-patterns"
    build-depends:      base,
                        bytestring,
                        text,
                        music-suite,
                        tasty,
                        tasty-hunit,
                        directory,
                        filepath,
                        lens,
                        music-suite
    type:               exitcode-stdio-1.0
    main-is:            Patterns.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

-- Examples:

executable "music-suite-examples-analysis"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            analysis.hs

executable "music-suite-examples-analysis-durations"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            AnalysisDurations.hs

executable "music-suite-examples-annotations"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            annotations.hs

executable "music-suite-examples-bartok"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            bartok.hs

executable "music-suite-examples-behavior"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            behavior.hs

executable "music-suite-examples-canon"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            canon.hs

executable "music-suite-examples-chopin"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            chopin.hs

executable "music-suite-examples-duo"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            duo.hs

executable "music-suite-examples-chords"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            chords.hs

executable "music-suite-examples-fugue1"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            fugue1.hs

executable "music-suite-examples-mozart"
    build-depends:      base,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            mozart.hs

executable "music-suite-examples-part"
    build-depends:      base,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            part.hs

executable "music-suite-examples-phrases"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            phrases.hs

executable "music-suite-examples-hello"
    build-depends:      base,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            hello.hs

executable "music-suite-examples-study-for-harp"
    build-depends:      base,
                        lens,
                        containers,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            StudyForHarp.hs

executable "music-suite-examples-time-signatures"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            TimeSignatures.hs

executable "music-suite-examples-dynamics"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            dynamics.hs

executable "music-suite-examples-trio"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            trio.hs

executable "music-suite-examples-tuplet"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            tuplet.hs

executable "music-suite-examples-klangfarben"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            klangfarben.hs

executable "music-suite-examples-chorale"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            chorale.hs

executable "music-suite-examples-piano1"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            piano1.hs
executable "music-suite-examples-piano2"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            piano2.hs
executable "music-suite-examples-harp-string-texture"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    ghc-options:        -fno-code
    main-is:            HarpStringTexture.hs

-- executable "music-suite-examples-piece1"
--     build-depends:      base,
--                         lens,
--                         music-suite
--     hs-source-dirs:     examples/pieces
--     main-is:            Piece1.hs

executable "music-suite-examples-piece3"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces
    ghc-options:        -fno-code
    main-is:            Piece3.hs

executable "music-suite-examples-ambitus"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces/Ambitus
    ghc-options:        -fno-code
    main-is:            Score.hs

executable "music-suite-examples-winds-phrasing"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces/WindsPhrasing
    ghc-options:        -fno-code
    main-is:            Score.hs

executable "music-suite-examples-sustain-punctuated"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces/SustainPunctuated
    ghc-options:        -fno-code
    main-is:            Score.hs

executable "music-suite-examples-piece8"
    build-depends:      base,
                        lens,
                        containers,
                        vector-space,
                        music-suite
    hs-source-dirs:     examples/pieces
    ghc-options:        -fno-code
    main-is:            Piece8.hs

executable "music-suite-examples-brass-large-ensemble"
    build-depends:      base,
                        lens,
                        containers,
                        random,
                        music-suite
    hs-source-dirs:     examples/pieces/BrassLargeEnsemble
    ghc-options:        -fno-code
    main-is:            Score.hs

executable "music-suite-examples-salient-melodic-transformations"
    build-depends:      base,
                        lens,
                        containers,
                        random,
                        music-suite
    hs-source-dirs:     examples/pieces/SalientMelodicTransformations
    ghc-options:        -fno-code
    main-is:            Score.hs


-- TODO CrawfordSeeger
-- TODO Floaters
-- TODO HarmonyToTexture
-- TODO HarmonyTriads
-- TODO HarmPhasing
-- TODO PianoChords
-- TODO PopRhythms

executable "doctester"
    ghc-options: -O3 -threaded
    build-depends:
      base,
      music-suite,
      doctest
    hs-source-dirs: doc-tools/doctester/src
    main-is: Main.hs
