
name:                   musicxml2
version:                1.6.2
synopsis:               A representation of the MusicXML format.
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    A representation of the MusicXML format.

source-repository head
  type:                 git
  location:             git://github.com/music-suite/musicxml2.git

library
    build-depends:      base                    >= 4 && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        nats,
                        data-default,
                        type-unary,
                        reverse-apply,
                        xml,
                        music-pitch-literal     == 1.6.2,
                        music-dynamics-literal  == 1.6.2
    exposed-modules:    Music.MusicXml
                        Music.MusicXml.Time
                        Music.MusicXml.Pitch
                        Music.MusicXml.Dynamics
                        Music.MusicXml.Read
                        Music.MusicXml.Score
                        Music.MusicXml.Write
                        Music.MusicXml.Simple
    other-modules:      Music.MusicXml.Write.Score
    hs-source-dirs:     src
    default-language:   Haskell2010
