
name:                   musicxml2
version:                1.9.0
synopsis:               A representation of the MusicXML format.
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    A representation of the MusicXML format.

source-repository head
  type:                 git
  location:             git://github.com/music-suite/musicxml2.git

library
    build-depends:      base                    >= 4 && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        nats,
                        data-default,
                        type-unary              >= 0.2.16 && < 1.0,
                        reverse-apply,
                        xml,
                        music-pitch-literal     == 1.9.0,
                        music-dynamics-literal  == 1.9.0
    exposed-modules:    Data.Music.MusicXml
                        Data.Music.MusicXml.Time
                        Data.Music.MusicXml.Pitch
                        Data.Music.MusicXml.Dynamics
                        Data.Music.MusicXml.Read
                        Data.Music.MusicXml.Score
                        Data.Music.MusicXml.Write
                        Data.Music.MusicXml.Simple
    other-modules:      Data.Music.MusicXml.Write.Score
    hs-source-dirs:     src
    default-language:   Haskell2010
