name:                music-suite-app-front
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lubeck-minimal-app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   ghc-options:         -Wall
--   exposed-modules:     Lib
--   build-depends:       base
--                      , lubeck-web
--   default-language:    Haskell2010

executable music-suite-app-front
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , lubeck-web
                     , lubeck-frp
                     , aeson
                     , ghcjs-base
                    --  , music-suite-app-front
                     , virtual-dom
  default-language:    Haskell2010

-- source-repository head
  -- type:     git
  -- location: https://github.com/githubuser/lubeck-minimal-app
