
name:               hslinks
version:            0.6
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           Resolves links to Haskell identifiers.
category:           Development
tested-with:        GHC
build-type:         Simple

description:
    A simple utility program that resolves links to Haskell identifiers in Markdown-style text.
    This is useful if you want to maintain documentation of a Haskell program or library outside
    the source code but still have links the Haddock-generated API documentation.
    .
    For usage, see <https://github.com/hanshoglund/hslinks>
    
source-repository head
    type:               git
    location:           git://github.com/hanshoglund/hslinks.git

executable "hslinks"
    build-depends:
        base            >= 4 && < 5,
        Cabal,
        hint,
        process,
        MemoTrie,
        regex-compat
    hs-source-dirs:     src
    default-language:   Haskell2010
    main-is:
        hslinks.hs
